@@ -27,8 +27,8 @@ public class CloudExplorer {
                 + "\nrmbucket bucket"
                 + "\nmakebucket what"
                 + "\nsynctos3 location bucket [folder]"
-                + "\nmigrate bucket destination_bucket"
-                + "\nsnapshot bucket snapshot_bucket"
+                + "\nmigrate bucket destination_bucket" 
+               + "\nsnapshot bucket snapshot_bucket [existing_snapshot_folder]"
                 + "\nsyncfroms3 destination bucket [folder]"
                 + "\nuploadtest bucket size threads operations [mixed]"
                 + "\ndownloadtest bucket size threads operations [mixed]"
